--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "college-cookbook",
   "version": "1.0.0",
   "description": "This is a cookbook for college students that would like to learn how to cook.",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed",
+    "build": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
@@ -16,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/nyashanice/College-Cookbook/issues"
   },
-  "homepage": "https://github.com/nyashanice/College-Cookbook#readme"
+  "homepage": "https://github.com/nyashanice/College-Cookbook#readme",
+  "dependencies": {
+    "mongoose": "^7.0.2"
+  }
 }
