--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a cookbook for college students that would like to learn how to cook.",
   "main": "server/server.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "NODE_ENV=production node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
@@ -20,9 +20,9 @@
   "bugs": {
     "url": "https://github.com/nyashanice/College-Cookbook/issues"
   },
-  "homepage": "https://github.com/nyashanice/College-Cookbook#readme",
+  "homepage": "/",
   "dependencies": {
     "concurrently": "^7.6.0",
-    "mongoose": "^7.0.2"
+    "mongoose": "^7.2.2"
   }
 }
