--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "apollo-server-express": "^3.12.0",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
-    "mongoose": "^7.0.2"
+    "graphql-tag": "^2.12.6",
+    "mongoose": "^7.2.2"
   }
 }
